<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Touch List</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_customer">Pesquisar Empresas</string>
    <string name="phone_1_">Tel. Comercial 1:</string>
    <string name="phone_2_">Tel. Comercial 2:</string>
    <string name="contact_">Contato:</string>
    <string name="e_mail_">E-mail:</string>
    <string name="corporate_">Empresa:</string>
    <string name="website_">Website:</string>
    <string name="address_">Endereço:</string>
    <string name="number_">Número:</string>
    <string name="postal_code_">CEP:</string>
    <string name="district_">Bairro:</string>
    <string name="city_">Cidade:</string>
    <string name="province_">Estado:</string>
    <string name="search_">Pesquisa:</string>
    <string name="filter_">Filtro:</string>
    <string name="search">Pesquisar</string>
    <string name="todo">TODO</string>
    <string name="corporate">Empresa</string>
    <string name="email">E-mail</string>
    <string name="website">Website</string>
    <string name="district">Bairro</string>
    <string name="city">Município</string>
    <string name="province">Estado</string>

</resources>
