<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TabWidget>
        
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            
            <ScrollView
                android:id="@+id/scrollSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                
                <LinearLayout
                    android:id="@+id/layoutSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    
                    <TextView
	                    android:id="@+id/textSearch"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="10dp"
	                    android:layout_marginRight="10dp"
	                    android:layout_marginTop="20dp"
	                    android:text="@string/search_"
	                    android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editSearch"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textPersonName" >
			            
			            <requestFocus />
        			</EditText>
			        
			        <TextView
	                    android:id="@+id/textFilter"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="10dp"
	                    android:layout_marginRight="10dp"
	                    android:layout_marginTop="20dp"
	                    android:text="@string/filter_"
	                    android:textAppearance="?android:attr/textAppearanceMedium" />

			        <Spinner
			            android:id="@+id/spinnerFilter"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp" />
			        
			        <RelativeLayout
			            android:id="@+id/layoutMainSearch"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="20dp" >
			            
			            <LinearLayout
			                android:id="@+id/layoutButtons"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:layout_alignParentTop="true"
			                android:layout_centerHorizontal="true"
			                android:gravity="center_vertical"
			                android:orientation="horizontal" >
			                
			                <Button
			                    android:id="@+id/buttonSearch"
			                    android:layout_width="wrap_content"
			                    android:layout_height="wrap_content"
			                    android:text="@string/search" />
			                
			            </LinearLayout>
			            
			        </RelativeLayout>
                    
                </LinearLayout>
                
            </ScrollView>
            
            <ScrollView
                android:id="@+id/scrollPersonalData"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                
                <LinearLayout
                    android:id="@+id/layoutPersonalData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                
	                <TextView
	                    android:id="@+id/textName"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="10dp"
	                    android:layout_marginRight="10dp"
	                    android:layout_marginTop="20dp"
	                    android:text="@string/name_"
	                    android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editName"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textPersonName" >
			            
			            <requestFocus />
        			</EditText>
		        
			        <TextView
			            android:id="@+id/textPhone1"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="20dp"
			            android:text="@string/phone_1_"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editPhone1"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textPersonName" />
		        
			        <TextView
			            android:id="@+id/textPhone2"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="20dp"
			            android:text="@string/phone_2_"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editPhone2"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textPersonName" />
		        
			        <TextView
			            android:id="@+id/textContact"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="20dp"
			            android:text="@string/contact_"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editContact"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textPersonName" />
		        
			        <TextView
			            android:id="@+id/textEmail"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="20dp"
			            android:text="@string/e_mail_"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editEmail"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textEmailAddress" />
		        
			        <TextView
			            android:id="@+id/textWebsite"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="20dp"
			            android:text="@string/website_"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editWebsite"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textPersonName" />
		        
		        </LinearLayout>
                
            </ScrollView>
                
            <ScrollView
                android:id="@+id/scrollAddressData"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                
                <LinearLayout
                    android:id="@+id/layoutAddressData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
			        
                    <TextView
			            android:id="@+id/textAddress"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="20dp"
			            android:text="@string/address_"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editAddress"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textPersonName" >
			            
			            <requestFocus />
        			</EditText>
			        
			        <TextView
			            android:id="@+id/textNumber"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="20dp"
			            android:text="@string/number_"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editNumber"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textPersonName" />
			        
			        <TextView
			            android:id="@+id/textPostalCode"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="20dp"
			            android:text="@string/postal_code_"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editPostalCode"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textPersonName" />
			        
			        <TextView
			            android:id="@+id/textDistrict"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="20dp"
			            android:text="@string/district_"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editDistrict"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textPersonName" />
			        
			        <TextView
			            android:id="@+id/textCity"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="20dp"
			            android:text="@string/city_"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editCity"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textPersonName" />
			        
			        <TextView
			            android:id="@+id/textProvince"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="20dp"
			            android:text="@string/province_"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
		
			        <EditText
			            android:id="@+id/editProvince"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:ems="10"
			            android:inputType="text|textPersonName" />
			        
                </LinearLayout>
                
            </ScrollView>
            
        </FrameLayout>
        
    </LinearLayout>
    
</TabHost>